Adicion de controladores y paginas xhtml

--- a/marketdemoWeb/WebContent/index.html
+++ b/marketdemoWeb/WebContent/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5">Esta sencilla aplicaci&oacute;n se implementa sobre una arquitectura JavaEE cl&aacute;sica.</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Ingresar a comprar!</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="faces/clientes/index.xhtml">Ingresar a comprar!</a>
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
           <h2 class="text-white mt-0">Funciones de administraci&oacute;n del sistema</h2>
           <hr class="divider light my-4">
           <p class="text-white-50 mb-4">El sistema cuenta con dos perfiles de usuarios operadores: vendedor y supervisor</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Login</a>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="faces/login.xhtml">Login</a>
         </div>
       </div>
     </div>
