--- a/marketdemoWeb/WebContent/clientes/registro.xhtml
+++ b/marketdemoWeb/WebContent/clientes/registro.xhtml
@@ -8,7 +8,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Registro clientes</title>
 </h:head>
-<body style="font-size: 70%">
+<body>
 	<h:form>
 		<p:panel header="Registro de clientes" id="panel1">
 			<h:panelGrid columns="3">
