--- a/marketdemoWeb/WebContent/supervisor/facturas.xhtml
+++ b/marketdemoWeb/WebContent/supervisor/facturas.xhtml
@@ -8,68 +8,58 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Facturas</title>
 </h:head>
-<body style="font-size:60%">
+<body>
+	<p:growl>
+		<p:autoUpdate />
+	</p:growl>
+	<h:form>
+		<p:menubar>
+			<p:menuitem value="Inicio" action="index" icon="fa fa-home"></p:menuitem>
+			<p:menuitem value="Pedidos" action="pedidos"
+				icon="fa fa-shopping-cart"></p:menuitem>
+			<p:menuitem value="Productos" action="productos" icon="fa fa-laptop"></p:menuitem>
+			<p:menuitem value="Parámetros" action="parametros" icon="fa fa-cog"></p:menuitem>
+			<f:facet name="options">
+				<p:commandButton value="Salir" action="#{beanLogin.salirSistema()}"
+					icon="fa fa-sign-out" />
+			</f:facet>
+		</p:menubar>
+	</h:form>
+	<br />
 	<h:form id="form1">
-		<h:commandLink action="index" value="Ir al inicio..." />
-		<p:dataTable value="#{beanFactura.listaFacturasCab}"
-			var="f" id="tablaFacturas">
+		<p:dataTable value="#{beanFactura.listaFacturasCab}" var="f"
+			id="tablaFacturas">
 			<f:facet name="header">
 				<h:outputText value="Listado de facturas" />
 			</f:facet>
-			<p:column id="col1">
-				<f:facet name="header">
-					<h:outputText value="NUMERO"></h:outputText>
-				</f:facet>
+			<p:column headerText="NUMERO" style="width:80px">
 				<h:outputText value="#{f.numeroFactura}"></h:outputText>
 			</p:column>
-			<p:column id="col2">
-				<f:facet name="header">
-					<h:outputText value="CLIENTE"></h:outputText>
-				</f:facet>
-				<h:outputText value="#{f.cliente.cedulaCliente}"></h:outputText>
+			<p:column headerText="CLIENTE">
+				<h:outputText
+					value="#{f.cliente.cedulaCliente} #{f.cliente.apellidos} #{f.cliente.nombres}"></h:outputText>
 			</p:column>
-			<p:column id="col3">
-				<f:facet name="header">
-					<h:outputText value="CLIENTE"></h:outputText>
-				</f:facet>
-				<h:outputText value="#{f.cliente.apellidos} #{f.cliente.nombres}"></h:outputText>
-			</p:column>
-			<p:column id="col4">
-				<f:facet name="header">
-					<h:outputText value="FECHA"></h:outputText>
-				</f:facet>
+			<p:column headerText="FECHA" style="width:90px">
 				<h:outputText value="#{f.fechaEmision}">
-					<f:convertDateTime pattern="dd/MM/yyyy"/>
+					<f:convertDateTime pattern="dd/MM/yyyy" />
 				</h:outputText>
 			</p:column>
-			<p:column id="col5">
-				<f:facet name="header">
-					<h:outputText value="SUBTOTAL"></h:outputText>
-				</f:facet>
+			<p:column headerText="SUBTOTAL" style="width:100px">
 				<h:outputText value="#{f.subtotal}">
-					<f:convertNumber maxFractionDigits="2" minFractionDigits="2"/>
+					<f:convertNumber maxFractionDigits="2" minFractionDigits="2" />
 				</h:outputText>
 			</p:column>
-			<p:column id="col6">
-				<f:facet name="header">
-					<h:outputText value="IVA"></h:outputText>
-				</f:facet>
+			<p:column headerText="IVA" style="width:100px">
 				<h:outputText value="#{f.valorIva}">
-					<f:convertNumber maxFractionDigits="2" minFractionDigits="2"/>
+					<f:convertNumber maxFractionDigits="2" minFractionDigits="2" />
 				</h:outputText>
 			</p:column>
-			<p:column id="col7">
-				<f:facet name="header">
-					<h:outputText value="TOTAL"></h:outputText>
-				</f:facet>
+			<p:column headerText="TOTAL" style="width:100px">
 				<h:outputText value="#{f.total}">
-					<f:convertNumber maxFractionDigits="2" minFractionDigits="2"/>
+					<f:convertNumber maxFractionDigits="2" minFractionDigits="2" />
 				</h:outputText>
 			</p:column>
-			<p:column id="col8">
-				<f:facet name="header">
-					<h:outputText value="DETALLES"></h:outputText>
-				</f:facet>
+			<p:column headerText="DETALLE PRODUCTOS">
 				<h:dataTable value="#{f.facturaDets}" var="fd">
 					<h:column>
 						<h:outputText value="#{fd.producto.nombre}" />
