supletorio: implementar opción eliminar pedidos en rol supervisor.

--- a/marketdemoWeb/WebContent/supervisor/pedidos.xhtml
+++ b/marketdemoWeb/WebContent/supervisor/pedidos.xhtml
@@ -65,6 +65,9 @@
 						action="#{beanSupervisor.actionDespacharPedido(pc)}"
 						icon="fa fa-check" />
 				</p:column>
+				<p:column headerText="ELIMINAR">
+					<p:commandButton icon="fa fa-close" />
+				</p:column>
 			</p:dataTable>
 		</p:panel>
 		<p:dialog header="INFORMACION" widgetVar="dialogo1" modal="true"
